--- a/src/static/nova_movimentacao.css
+++ b/src/static/nova_movimentacao.css
@@ -62,8 +62,8 @@
   font-weight: normal;
 }
 
-.form-movimentacao button {
-  margin-top: 2rem;
+.btn-salvar-form {
+  margin-top: 20px;
   background-color: #ffa02c;
   color: white;
   border: none;
@@ -76,6 +76,9 @@
   width: 100%;
 }
 
+.btn-salvar-form:hover {
+  background-color: #cc7c02;
+}
 .form-movimentacao button:hover {
   background-color: #cc7c02;
 }
@@ -173,8 +176,71 @@
   background-color: #cc7c02;
 }
 
+.material-row {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.material-row select.material-select {
+  max-width: 50%; 
+}
+
+.material-row input[type="number"] {
+  max-width: 15%; 
+}
+
+.material-select {
+  width: 80%;
+}
+
+.remove-button {
+  background: red;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.remove-button:hover {
+  background: darkred;
+}
+
+.add-button {
+  background: #ffa02c;
+  color: white;
+  border: none;
+  padding: 6px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.form-header .add-button {
+  height: 40px;
+  width: 40px;
+  background-color: #ffa02c;
+  color: #fff;
+  font-size: 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  margin-top: 0; 
+}
+
 @media (max-width: 768px) {
   .form-movimentacao {
     padding: 1.2rem;
-  }
 }
